--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/adapter-node": "^4.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tabler/icons-svelte": "^2.47.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/eslint": "8.56.0",
     "@types/node": "20.11.10",
@@ -33,6 +34,7 @@
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-copy": "^1.4.1",
     "tailwindcss": "3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
